k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-app

spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world-app
  template:
    metadata:
      labels:
        app: hello-world-app
    spec:
      containers:
        - name: hello-world-app
          image: "nexus-repository/app-name:latest"
          ports:
            - containerPort: 8080
