k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-app-service
spec:
  selector:
    app: hello-world-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
