k8s/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hello-world-app
spec:
  to:
    kind: Service
    name: hello-world-app
  port:
    targetPort: 8080
  tls:
    termination: edge
